<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_floorview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/content_section_height"
                android:background="@drawable/background_pressable">

                <ImageView
                    android:layout_width="@dimen/content_icon_size"
                    android:layout_height="@dimen/content_icon_size"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:src="@drawable/ic_building" />

                <TextView
                    android:id="@+id/text_floorview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_with_icon_margin_left"
                    android:text="@string/building_show_floorview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_buildingparts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/text_buildingpart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_with_icon_margin_left"
                    android:text="@string/building_parts" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="2dp"
                    android:layout_toRightOf="@id/text_buildingpart"
                    android:scrollbars="horizontal" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/text_with_icon_margin_left"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/layout_map"
                android:layout_width="match_parent"
                android:layout_height="@dimen/content_section_height"
                android:background="@drawable/background_pressable">

                <ImageView
                    android:layout_width="@dimen/content_icon_size"
                    android:layout_height="@dimen/content_icon_size"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:src="@drawable/ic_outdoor_map" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_with_icon_margin_left"
                    android:text="@string/building_show_map"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/text_with_icon_margin_left"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/layout_directions"
                android:layout_width="match_parent"
                android:layout_height="@dimen/content_section_height"
                android:background="@drawable/background_pressable">

                <ImageView
                    android:layout_width="@dimen/content_icon_size"
                    android:layout_height="@dimen/content_icon_size"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:src="@drawable/ic_directions" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/text_with_icon_margin_left"
                    android:text="@string/building_directions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card_actions"
        android:scaleType="centerCrop"
        android:src="@drawable/lmu" />

    <View
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignBottom="@id/image"
        android:background="@drawable/gradient_black_to_transparent" />

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/image"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/text_secondary_light"
        tools:text="München" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/city"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/text_primary_light"
        tools:text="Geschwister-Scholl-Platz 1" />

</RelativeLayout>
